--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,14 +62,17 @@ body{
   background: #300aec;
   padding: 30px 0px;
   position: fixed;
+  
+}
+.wrapper .sidebar .sidebar_item{
+  text-transform: uppercase;
+  text-align: left;
   padding: 15px;
   border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.05);
-}
-.active {
+} 
+.wrapper .sidebar .sidebar_item :active {
   background-color: #666;
   color: white;
 }
-
-
