--- a/client/src/components/userLR/Login.css
+++ b/client/src/components/userLR/Login.css
@@ -6,3 +6,40 @@
   margin: 0 auto;
   max-width: 320px;
 }
+
+.login-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15em;
+}
+
+CardBody , h3 {
+  margin-bottom: 1.5em;
+}
+
+.form_inputs {
+  width: 18em;
+  margin-bottom: 0.5em;
+}
+
+.avatar {
+  position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: -70px;
+    width: 95px;
+    height: 95px;
+    border-radius: 50%;
+    z-index: 9;
+    background: #007bff;
+    padding: 15px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+}
+
+.avatar img {
+  max-width:100%;
+  max-height:100%;
+}
