--- a/client/src/components/landingPage/landing.css
+++ b/client/src/components/landingPage/landing.css
@@ -1,7 +1,7 @@
 .resumeTemplates {
   max-width: 100%;
   max-height: 100%;
-
+  margin-bottom: 1.2em;
 }
 .landing-container {
   padding-top: 3em;
@@ -23,8 +23,11 @@
 .card-lift--hover:hover{
   transform: translateY(-30px);
 }
+
 .card-lift--hover{
   transition: all .15s ease;
+  color: inherit;
+  text-decoration: none !important;
 }
 
 .display-3, .display-4 {
@@ -63,6 +66,7 @@
   line-height: 1.5;
   border-radius: .25rem;
   transition: all .15s ease;
+  text-decoration: none !important;
   }
 
 .btn-info {
@@ -72,14 +76,28 @@
   box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
   padding: .75em;
   }
+
 .btn-info:focus{
   background-color: #11cdef;
   border-color: #11cdef;
 }
+
 .card-body{
   padding: 1em;
 }
+
 .top-section {
   position: absolute;
   padding-left: 10em;
+}
+
+.template-btn{
+  text-decoration: none !important;
+  box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
+  padding: .75em;
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+  text-decoration: none !important;
+  border-radius: 5px;
 }
