--- a/client/src/components/preview/preview.css
+++ b/client/src/components/preview/preview.css
@@ -24,3 +24,28 @@
   cursor: pointer; /* Add a pointer on hover */
   overflow: scroll;
 }
+.overlay-white {
+  position: fixed; /* Sit on top of the page content */
+  display: block; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(255,255,255); /* Black background with opacity */
+  z-index: 3; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+  overflow: scroll;
+}
+.print-preview {
+  display: none;
+}
+@media print{
+  .print-preview {
+    display: block;
+  }
+}
+/*    width: 210mm;
+    height: 297mm;
+  */
